fix icon alignement

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -114,7 +114,7 @@ h1 {
 
 .btn-group {
     .btn {
-        margin: 0 5px 0 0;
+        margin: 0 6px 0 0;
 
         &:last-child {
             margin-right: 0;
